test/compflags/configs/configNotModScope.good
configNotModScope.chpl:5: error: configuration variables are allowed only at module scope
configNotModScope.chpl:10: error: configuration variables are allowed only at module scope
